--- a/CreateUniversityDB.ipynb
+++ b/CreateUniversityDB.ipynb
@@ -60,12 +60,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.003"
+                        "text/html": "Total execution time: 00:00:00.138"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 1
+            "execution_count": 21
         },
         {
             "cell_type": "markdown",
@@ -104,12 +104,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.005"
+                        "text/html": "Total execution time: 00:00:00.004"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 2
+            "execution_count": 22
         },
         {
             "cell_type": "markdown",
@@ -148,12 +148,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.001"
+                        "text/html": "Total execution time: 00:00:00.012"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 3
+            "execution_count": 23
         },
         {
             "cell_type": "markdown",
@@ -193,12 +193,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.001"
+                        "text/html": "Total execution time: 00:00:00.009"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 4
+            "execution_count": 24
         },
         {
             "cell_type": "markdown",
@@ -237,12 +237,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.002"
+                        "text/html": "Total execution time: 00:00:00.004"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 5
+            "execution_count": 25
         },
         {
             "cell_type": "markdown",
@@ -259,7 +259,7 @@
             "cell_type": "code",
             "source": [
                 "CREATE TABLE Studenten (\r\n",
-                "    Matrikelnummer INT NOT NULL,\r\n",
+                "    Matrikelnummer VARCHAR(9) NOT NULL,\r\n",
                 "    Vorname VARCHAR(30) NOT NULL,\r\n",
                 "    Nachname VARCHAR(30) NOT NULL,\r\n",
                 "    Studienbeginn DATE NOT NULL,\r\n",
@@ -281,12 +281,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.002"
+                        "text/html": "Total execution time: 00:00:00.004"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 6
+            "execution_count": 26
         },
         {
             "cell_type": "markdown",
@@ -303,7 +303,7 @@
             "cell_type": "code",
             "source": [
                 "CREATE TABLE StudentenZuVorlesung (\r\n",
-                "    Student INT NOT NULL,\r\n",
+                "    Student VARCHAR(9) NOT NULL,\r\n",
                 "    Vorlesung INT NOT NULL,\r\n",
                 "    CONSTRAINT fk_StudentenZuVorlesungStudenten FOREIGN KEY(Student) REFERENCES Studenten(Matrikelnummer) ON DELETE CASCADE,\r\n",
                 "    CONSTRAINT fk_StudentenZuVorlesungVorlesung FOREIGN KEY(Vorlesung) REFERENCES Vorlesungen(VorlesungsID)\r\n",
@@ -324,12 +324,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.001"
+                        "text/html": "Total execution time: 00:00:00.010"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 7
+            "execution_count": 27
         },
         {
             "cell_type": "markdown",
@@ -346,7 +346,7 @@
             "cell_type": "code",
             "source": [
                 "CREATE TABLE StudentenZuPruefungen (\r\n",
-                "    Student INT NOT NULL,\r\n",
+                "    Student VARCHAR(9) NOT NULL,\r\n",
                 "    Pruefung INT NOT NULL,\r\n",
                 "    Note DECIMAL(2, 1),\r\n",
                 "    CONSTRAINT fk_StudentenZuPruefungenStudenten FOREIGN KEY(Student) REFERENCES Studenten(Matrikelnummer),\r\n",
@@ -368,12 +368,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.001"
+                        "text/html": "Total execution time: 00:00:00.008"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 8
+            "execution_count": 28
         }
     ]
 }
