--- a/InsertUniversityData.ipynb
+++ b/InsertUniversityData.ipynb
@@ -41,23 +41,8 @@
                 "azdata_cell_guid": "639713b4-a7eb-4298-9157-d7159b7e7e21",
                 "language": "sql"
             },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "(7 rows affected)"
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.011"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 5
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -90,23 +75,8 @@
                 "language": "sql",
                 "azdata_cell_guid": "025145a4-8040-4a4a-be6f-f770a108d0ea"
             },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "(11 rows affected)"
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.010"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 6
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -137,23 +107,67 @@
                 "azdata_cell_guid": "efadfe7f-20c8-468c-9e4d-448f04234642",
                 "language": "sql"
             },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "(10 rows affected)"
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.007"
-                    },
-                    "metadata": {}
-                }
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## Studenten"
             ],
-            "execution_count": 7
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "d71cde60-1439-4bd2-921f-75d604788216"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "INSERT INTO Studenten(Matrikelnummer, Vorname, Nachname, Studienbeginn) VALUES\r\n",
+                "('09-4845-0', 'Eliane', 'Burri', '2019-10-01'),\r\n",
+                "('12-5776-4', 'Guido', 'Duss', '2019-10-01'),\r\n",
+                "('09-7270-8', 'Gertrud', 'Zollinger', '2019-10-01'),\r\n",
+                "('08-5694-8', 'Giorgio', 'Antonelli', '2018-10-01'),\r\n",
+                "('13-3963-7', 'Miguel', 'Sanchez', '2019-10-01'),\r\n",
+                "('09-6537-7', 'Zoran', 'Stefanovski', '2019-10-01'),\r\n",
+                "('10-4336-3', 'Luis', 'Prieto', '2019-10-01'),\r\n",
+                "('13-4372-1', 'Martin', 'Isler', '2019-10-01'),\r\n",
+                "('09-1079-4', 'Paolo', 'Di Lavello', '2019-10-01'),\r\n",
+                "('10-5068-5', 'Rolf', 'Meier', '2019-10-01'),\r\n",
+                "('09-9370-0', 'Marco', 'Maggi', '2019-10-01'),\r\n",
+                "('09-0523-5', 'Heike', 'Kurmann', '2019-10-01'),\r\n",
+                "('09-9376-6', 'Lelzim', 'Krasniqi', '2019-10-01'),\r\n",
+                "('14-0556-8', 'Jean-Paul', 'Léchenne', '2019-10-01'),\r\n",
+                "('09-0665-1', 'Roger', 'Détraz', '2017-10-01'),\r\n",
+                "('11-8456-6', 'Hans', 'Dubach', '2018-10-01'),\r\n",
+                "('10-3201-8', 'Yvonne', 'Keller', '2019-10-01'),\r\n",
+                "('12-0948-3', 'Priska', 'Weber', '2019-10-01'),\r\n",
+                "('13-3225-2', 'Heidi', 'Dubuis', '2019-10-01'),\r\n",
+                "('13-5660-2', 'Slobodan', 'Stojanovic', '2019-10-01'),\r\n",
+                "('07-0633-6', 'Bruno', 'Zobrist', '2018-10-01'),\r\n",
+                "('10-1471-6', 'Slobodanka', 'Babaja', '2019-10-01'),\r\n",
+                "('10-2466-6', 'Roger', 'Gugler', '2018-10-01'),\r\n",
+                "('13-3704-2', 'Marian', 'Genkinger', '2019-10-01'),\r\n",
+                "('12-8867-9', 'Michele', 'Dell''Amore', '2019-10-01')"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "c3469845-4765-44a5-86a9-4381ab8d05dd"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## Prüfungen"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "320d3520-22f5-4d7c-a196-18c8cd7cd70b"
+            },
+            "attachments": {}
         }
     ]
 }
